# wow

./: Cargo.toml  Dockerfile.client  Dockerfile.server  README.md
common/: Cargo.toml
common/src/: lib.rs  wow_error.rs
scripts/: build_docker.sh  start_wclient.sh  start_wclient_docker.sh  start_wserver.sh  start_wserver_docker.sh
wclient/: Cargo.toml
wclient/src/: main.rs
wserver/: Cargo.toml
wserver/config/: env.example  wow.toml  wow_docker.toml
wserver/data/: quotes.json
wserver/src/: controller.rs  main.rs
wserver/src/controller/: tcp_handler.rs  tcp_server.rs
wserver/src/driver/: settings.rs
