[workspace]
members = [
    # wserver
    "wserver",

    # wclient
    "wclient",

    # common libraries and models
    "common",
]

# to be able to run with `cargo run`, `check` and so on without selecting a specific package with `-p`
default-members = [
    "wserver",
    "wclient"
]


[profile.release]
lto = true
debug = false
debug-assertions = false
codegen-units = 1