[package]
name = "wserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
common = { path = "../common" }
config = "0.13.3"
rust-argon2 = "1.0.0"
passwords = "3.1.12"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
nanoid = "0.4.0"